# agentic-pa

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  bootstrap_env.py  install.py  launch.py  mvp-chief-of-staff-notes-design.md  pytest.ini  ruff.toml  run.cmd  run.sh  setup.cmd  setup.ps1  setup.sh  workspace-assistant-implementation-plan.md
.github/workflows/: ci.yml
agenda/: README.md  __init__.py  engine.py  models.py  parser.py  pyproject.toml  server.py
docs/: FIRST-RUN.md  runbook.md
docs/adr/: 0001-plaintext-notes-plus-agenda-engine.md  0002-task-list-is-action-authority.md  0003-frontend-owns-notes-git-versioning.md  0004-mvp-grounds-only-on-local-ground-truth.md  0005-sandbox-is-a-notes-only-leaf.md  0006-presentation-pane.md  0007-wiki-conventions-and-ground-truth-service.md  0008-venv-fallback-target-mode.md  0009-propose-confirm-ingest-and-diary-sweep.md  0010-env-var-preflight-layer.md  0011-restrict-write-mode-frontend-sole-writer.md  0012-present-propose-native-typed-args.md
docs/decisions/: D-opencode-http.md  D-opencode-sandbox.md
docs/design/: mvp-chief-of-staff-notes-design.md  workspace-assistant-implementation-plan.md  workspace-assistant-spec.md
docs/superpowers/plans/: 2026-05-30-agenda-service.md  2026-05-30-frontend-chat-ui.md  2026-05-30-frontend-opencode-proxy.md  2026-05-30-launcher-and-integration.md  2026-05-30-notes-git-versioning.md  2026-05-30-opencode-config-and-wiring.md  2026-05-31-llm-wiki-integration.md  2026-05-31-presentation-pane.md  2026-06-02-venv-fallback-launcher.md
docs/superpowers/specs/: 2026-05-31-llm-wiki-integration-design.md  2026-06-02-venv-fallback-launcher-design.md
frontend/: README.md  __init__.py  _atomic.py  app.py  bootstrap.py  config.py  events.py  opencode_client.py  proposal.py  proxy.py  pyproject.toml  render.py  requirements-dev.txt  setup_wizard.py  sweep.py  upload.py  versioning.py  wiki.py
frontend/assets/: notes-agent.md
frontend/ui/: app.js  index.html  styles.css
launcher/: README.md  run.py
notes-mvp/: .env.example  README.md  gen_opencode_config.py
notes-mvp/sample-notes/: tasks.todo.txt
notes-mvp/sample-notes/meetings/2026-05-29/: atlas-sync.md
notes-mvp/sample-notes/topics/: project-atlas.md
presenter/: pyproject.toml  server.py
tests/agenda/: test_determinism.py  test_engine_review.py  test_engine_today.py  test_engine_topic.py  test_frontmatter.py  test_parser_file.py  test_parser_line.py  test_server.py
tests/agenda/fixtures/notes/: tasks.todo.txt
tests/agenda/fixtures/notes/meetings/2026-05-29/: atlas.md
tests/agenda/fixtures/notes/topics/: project-atlas.md
tests/frontend/: fake_opencode.py  test_app.py  test_app_js.py  test_app_js.test.mjs  test_bootstrap.py  test_config.py  test_events.py  test_fake_opencode.py  test_mcp_servers.py  test_opencode_client.py  test_proposal.py  test_proxy.py  test_render.py  test_setup_wizard.py  test_sweep.py  test_upload.py  test_versioning.py  test_wiki.py
tests/install/: test_bootstrap_env.py  test_gen_opencode_config.py  test_install_mode.py  test_launch.py
tests/launcher/: test_preflight.py  test_preflight_env.py
tests/presenter/: test_server.py
tests/smoke/notes-mvp/: run_smoke.py  smoke.md  test_ingest_qwen.py
