[project]
name = "agenda-service"
version = "0.1.0"
description = "Read-only Ground Truth service (agenda views + wiki search) over the local notes"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0,<2",
    "pyyaml>=6.0,<7",
    # llm-wiki-tools is a sibling project (github.com/sfo2001/llm-wiki-tools), NOT a
    # PyPI package — install it separately/first (CONTRIBUTING.md, setup.sh, CI). It
    # is deliberately omitted here: a bare "llm-wiki-tools" resolves to an unrelated
    # PyPI name (dependency confusion), which is what it must never do.
]

[tool.setuptools.packages.find]
where = [".."]
include = ["agenda*"]

[project.scripts]
agenda-server = "agenda.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
