[project]
name = "agenda-service"
dynamic = ["version"]
description = "Read-only Ground Truth service (agenda views + wiki search) over the local notes"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0,<2",
    "pyyaml>=6.0,<7",
    # llm-wiki-tools is a sibling project (github.com/sfo2001/llm-wiki-tools), NOT a
    # PyPI package — install it separately/first (CONTRIBUTING.md, setup.sh, CI). It
    # is deliberately omitted here: a bare "llm-wiki-tools" resolves to an unrelated
    # PyPI name (dependency confusion), which is what it must never do.
]

[tool.setuptools.packages.find]
where = [".."]
include = ["agenda*"]

[project.scripts]
agenda-server = "agenda.server:main"

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# One version for the whole monorepo, derived from the repo's git tags. root=".."
# because this pyproject lives in a subdir of the repo root; no-local-version drops
# the +g<hash> suffix (matches the lwt-wiki convention).
root = ".."
local_scheme = "no-local-version"
