[project]
name = "notes-frontend"
dynamic = ["version"]
description = "OpenCode proxy + SSE backend for the Chief-of-Staff Notes assistant"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "httpx>=0.27,<1",
    "python-multipart>=0.0.12,<1",
    "markitdown>=0.0.1,<0.2",
    "markdown>=3.6,<4",
    "nh3>=0.2,<1",
    # llm-wiki-tools is a sibling project (github.com/sfo2001/llm-wiki-tools), NOT a
    # PyPI package — install it separately/first (CONTRIBUTING.md, setup.sh, CI). It
    # is deliberately omitted here: a bare "llm-wiki-tools" resolves to an unrelated
    # PyPI name (dependency confusion), which is what it must never do.
]

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["frontend*"]

[tool.setuptools.package-data]
frontend = ["assets/*.md"]

[tool.setuptools_scm]
# One version for the whole monorepo, from the repo's git tags (root="..", subdir
# pyproject); no-local-version drops the +g<hash> suffix.
root = ".."
local_scheme = "no-local-version"
