[project]
name = "presenter-service"
dynamic = ["version"]
description = "MCP server: the present(path) UI signal and propose(diary, actions, topics, meetings) ingest tool"
requires-python = ">=3.10"
# `notes-frontend` is the local sibling package (it ships the `frontend`
# import package). It MUST be named by its distribution name here, not the
# bare import name `frontend` — `"frontend"` resolves to an unrelated PyPI
# package whose import shadows ours and crashes the present MCP server on
# startup (RuntimeError: Directory 'static/' does not exist).
dependencies = ["mcp>=1.2.0,<2", "notes-frontend"]

[project.scripts]
present-server = "presenter.server:main"

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["presenter*"]

[tool.setuptools_scm]
# One version for the whole monorepo, from the repo's git tags (root="..", subdir
# pyproject); no-local-version drops the +g<hash> suffix.
root = ".."
local_scheme = "no-local-version"
